--- a/.gitignore
+++ b/.gitignore
@@ -1,39 +1,38 @@
-.emacs.d/url/cache
-.emacs.d/.emacs.desktop
-.emacs.d/auto-save-list
-.emacs.d/.session
-custom.el
+emacs/url/cache
+emacs/.emacs.desktop
+emacs/auto-save-list
+emacs/.session
 *.elc
 CVS
 .svn
 *~
 .cvsignore
 .*.lock
-.emacs.d/tramp
-.emacs.d/TODO
-.emacs.d/anything-c-adaptive-history
-.emacs.d/.org-id-locations
-.emacs.dcookies
-.emacs.d/newsticker
-.emacs.d/ac-comphist.dat
+emacs/tramp
+emacs/TODO
+emacs/anything-c-adaptive-history
+emacs/.org-id-locations
+emacscookies
+emacs/newsticker
+emacs/ac-comphist.dat
 \#*
-.emacs.d/elpa
-.emacs.d/site-lisp/package/
-.emacs.d/swank
-.emacs.d/.mc-lists.el
-.emacs.d/var
-.emacs.d/.sqli_history
-.emacs.d/frame-restore-parameters
-.emacs.d/.achievements
-.emacs.d/.bookmarks.el
-.emacs.d/history
-.emacs.d/helm-adaptive-history
-.emacs.d/thumbs/
-.emacs.d/emms/
-.emacs.d/.smex-items
-.emacs.d/image-dired/
-.emacs.d/eshell
-.emacs.d/.cask/
-.emacs.d/.sx/
-.emacs.d/org-clock-save.el
-.emacs.d/ditaa*.jar
+emacs/elpa
+emacs/site-lisp/package/
+emacs/swank
+emacs/.mc-lists.el
+emacs/var
+emacs/.sqli_history
+emacs/frame-restore-parameters
+emacs/.achievements
+emacs/.bookmarks.el
+emacs/history
+emacs/helm-adaptive-history
+emacs/thumbs/
+emacs/emms/
+emacs/.smex-items
+emacs/image-dired/
+emacs/eshell
+emacs/.cask/
+emacs/.sx/
+emacs/org-clock-save.el
+emacs/ditaa*.jar
